--- a/wp-content/themes/skilled-child/style.css
+++ b/wp-content/themes/skilled-child/style.css
@@ -344,14 +344,14 @@ p.chzn-drop select.select{
 }
 
 .tutor-registration .form-inline .zip .form-control{
-	width: 35%;
+    width: 75%;
 }
 
 .tutor-registration .form-inline .languages label{
 	width: 20.5%;
 }
 
-.tutor-registration .form-inline .languages .add-more{
+.tutor-registration .form-inline .add-more{
     margin: 0 0 0 1em;
 }
 .tutor-registration .form-inline .languages input[type="checkbox"]{
@@ -380,6 +380,11 @@ p.chzn-drop select.select{
 .tutor-registration .form-inline .choose-file label,
 .tutor-registration .form-inline .radio label{
 	width: auto;
+}
+
+.tutor-registration .form-inline p.field-para{
+	display:inline-block;
+	vertical-align:top;
 }
 
 .tutor-registration .form-inline .phone label
@@ -585,6 +590,7 @@ p.chzn-drop select.select{
 	width: 30%;
    	margin: 0 auto;
 }
+
 
 .woocommerce-ResetPassword.lost_reset_password p .input-text,
 .woocommerce form.login.form-signin .input-text{
