--- a/wp-content/themes/skilled-child/style.css
+++ b/wp-content/themes/skilled-child/style.css
@@ -55,15 +55,6 @@ input[type="button"].cancel-btn:hover{
 }
 
 
-.select,
-.form-control{
-	border:1px solid #e89d2d;
-	background:#fff;
-	border-radius:4px;
-	vertical-align: top;
-	height: 35px;
-}
-
 .main-menu{
 	width:60%;
     margin: 10px 0 0 0;
@@ -335,6 +326,16 @@ input[type="button"].cancel-btn:hover{
 	border: 1px solid #ccc;
 	margin: 10px 0;
 }
+
+.tutor-registration .select,
+.tutor-registration .form-control{
+	border:1px solid #e89d2d;
+	background:#fff;
+	border-radius:4px;
+	vertical-align: top;
+	height: 35px;
+}
+
 
 .tutor-registration article{
 	margin: 20px 0 10px 0;
@@ -908,6 +909,10 @@ nav.woocommerce-MyAccount-navigation ul li{
     border-radius: 4px;
     vertical-align: top;
     height: 35px;
+}
+
+.woocommerce form.change-details .box-heading h4 {
+    margin: 1% 0 2% 0;
 }
 
 .woocommerce form.change-details .form-row {
