--- a/wp-content/themes/skilled-child/css/responsive.css
+++ b/wp-content/themes/skilled-child/css/responsive.css
@@ -366,7 +366,7 @@
 }
 
 }
-/* ----------- iPhone 6+ ends here----------- */
+/* ----------- iPhone ends here----------- */
 /* ipad css*/
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px)  {
 .student-registration .form-inline label,
