--- a/wp-content/themes/skilled-child/style.css
+++ b/wp-content/themes/skilled-child/style.css
@@ -976,7 +976,7 @@ nav.woocommerce-MyAccount-navigation ul li{
     vertical-align: top;
 }
 
-.institute{
+.filling-form .institute{
 	margin: 0 0 1em 0;
 }
 
